--- a/frontend/src/pages/CalendarView.css
+++ b/frontend/src/pages/CalendarView.css
@@ -65,7 +65,7 @@
 }
 
 .calendar-view-filter button {
-    background: #000000;
+    background: #71baff;
     color: #fff;
     font-weight: 600;
     border: none;
